poll using full name